# nlidb-with-grammar

./: .gitignore  README.md  migrate_sqlite_to_postgres.sh  misc.py  postgres_setup_instructions.txt  pyproject.toml
app/: __init__.py  constants.py  main.py
app/classification/: __init__.py  model.py  service.py  view.py
app/db/: __init__.py  model.py  service.py  view.py
app/generation/: __init__.py  model.py  service.py  view.py
app/models/: __init__.py  db_label_mapping.pkl  db_logistic_model.pkl  db_tfidf_vectorizer.pkl  view.py
app/prompts/: __init__.py  builder.py  extract_columns_prompt.jinja  extract_tables_prompt.jinja  model.py  sql_prompt.jinja  view.py
app/test/: __init__.py  model.py  view.py
classifiers/: baseline_classification_1.ipynb  baseline_classification_2.ipynb  baseline_clustering_1.ipynb  baseline_clustering_2.ipynb  db_classifier.py  db_tfidf_vectorizer.pkl  multi_label_table_classifier.py  multi_label_table_classifier_test.py  table_classifiers.py
classifiers/multi_label_model/: config.json
data/bird/: data_analysis.ipynb  preprocess.ipynb  process_tables.py  processed_tables.json  tablenames_dataset.csv
db/: migrate.py  out.txt  test_connection.py
grammars/: grammar_v1.gbnf  grammar_v2.gbnf  plan.gbnf
