[tool.poetry]
name = "nlidb-grammar"
version = "0.1.0"
description = ""
authors = ["Murat Bayraktar <bayraktar.muraat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.7.0"
anyio = "^4.7.0"
certifi = "^2024.8.30"
distro = "^1.9.0"
func-timeout = "^4.3.5"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
pip = "^24.3.1"
pydantic = "^2.10.3"
pydantic-core = "^2.27.1"
pymysql = "^1.1.1"
sniffio = "^1.3.1"
tk = "^0.1.0"
tqdm = "^4.67.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "1.5.2"
xgboost = "^2.1.3"
jinja2 = "^3.1.4"
huggingface-hub = "^0.27.1"
openai = "^1.59.6"
uvicorn = {extras = ["fastapi"], version = "^0.34.0"}
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
torch = "^2.4.1"
transformers = "^4.48.0"
llama-cpp-python = "^0.3.6"
pydantic-gbnf-grammar-generator = "^0.1.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
